- 维修现需要消耗组装所用的材料